--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -33,4 +33,4 @@ async fn rocket(
 }
 ```
 
-The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/persist)
+The full example can be found on [GitHub.](https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/persist)
