--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -56,4 +56,10 @@ async fn poem(
 }
 ```
 
-The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/postgres)
+The full example can be found on [GitHub.](https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/postgres)
+
+## Deletion
+
+Currently you can't safely delete your own shared database at the moment - we're working on implementing functionality for self-service database deletion. In the meantime, feel free to [reach out to us](https://www.shuttle.rs/contact) or open a help thread on our Discord if you need any assistance with this.
+
+Note that if you do accidentally drop your provisioned database, you will need to [contact us](https://www.shuttle.rs/contact) to assist you with your issue or you can open a help thread on our Discord server.
