--- a/examples/actix-postgres.mdx
+++ b/examples/actix-postgres.mdx
@@ -1,20 +1,22 @@
 ---
 title: "Postgres Todo App"
+description: "This article walks you through how you can easily set up a simple to-do app using Actix Web and SQLx with PostgresQL."
 ---
 
-This example shows how to make a simple TODO app using Actix Web and a shared Shuttle Postgres DB.
+## Description 
+This example shows how to make a simple TODO app using Axum and a shared Shuttle Postgres DB.
 
 The following routes are provided:
-```
-- GET /todos/<id> - Get a to-do item by ID.
-- POST /todos - Create a to-do item. Takes "note" as a JSON body parameter.
-```
+- GET `/todos/<id>` - Get a to-do item by ID.
+- POST `/todos` - Create a to-do item. Takes "note" as a JSON body parameter.
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
 cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
  --subfolder actix-web/postgres
 ```
+
+## Code
 
 <CodeGroup>
 ```rust src/main.rs
@@ -116,3 +118,27 @@ sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] 
 tokio = "1.26.0"
 ```
 </CodeGroup>
+
+## Usage
+
+Once you've cloned the example, try launching it locally using `cargo shuttle run`. Once you've verified that it runs successfully, try using cURL in a new terminal to send a POST request:
+
+```bash
+curl -X POST -d '{"note":"Hello world!"}' -H 'Content-Type: application/json' \
+ http://localhost:8000/todo
+```
+
+Assuming the request was successful, you'll get back a JSON response with the ID and Note of the record you just created. If you try the following cURL command, you should be able to then retrieve the message you stored:
+
+```bash
+curl http://localhost:8000/todo/<id>
+```
+
+Interested in extending this example? Here's as couple of ideas:
+- Add update and delete routes
+- Add static files to show your records
+---
+
+<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+
+<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
