--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -1,15 +1,13 @@
 ---
 title: "Static Files"
-description:
-  "Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust."
+description: "This article walks you through setting up static files with Actix Web, a powerful Rust framework for battle-hardened web applications."
 ---
 
-This section revolves around simple Actix examples you can get quickly started with by following these 3 steps:
-1. Initialize a new Actix project by running the `cargo shuttle init --template actix-web` command
-2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
-3. Running the `cargo shuttle deploy` command
+## Description
 
-<Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
+This example has one route at `/` where the homepage is served and shows you how you can serve HTML or other types of files with Actix Web.
+
+Note that we declare what files we allow our app to serve in the `Shuttle.toml` config file which is should be placed in the project root and only allows files that are within the project folder.
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
@@ -17,16 +15,23 @@ cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
  --subfolder actix-web/static-files
 ```
 
+## Code
+
 <CodeGroup>
 ```rust src/main.rs
-use actix_web::{get, web::ServiceConfig};
+use actix_files::NamedFile;
+use actix_web::{get, web::ServiceConfig, Responder};
 use shuttle_actix_web::ShuttleActixWeb;
 
+#[get("/")]
+async fn index() -> impl Responder {
+    NamedFile::open_async("assets/index.html").await
+}
+
 #[shuttle_runtime::main]
-async fn actix_web(
-) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
+async fn actix_web() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
     let config = move |cfg: &mut ServiceConfig| {
-        cfg.service(fs::Files::new("/", "./assets"));
+        cfg.service(index);
     };
 
     Ok(config.into())
@@ -64,6 +69,12 @@ assets = ["assets/*"]
 ```
 
 </CodeGroup>
+
+## Usage
+
+After you clone the example, launch it locally by using `cargo shuttle run` then visit the home route at `http://localhost:8000` - you should see a homepage that shows our included HTML file. 
+
+You can extend this example by adding more routes that serve other files.
 
 ---
 
