--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -68,4 +68,10 @@ async fn tide(#[shuttle_aws_rds::Postgres] pool: PgPool) -> ShuttleTide<MyState>
 }
 ```
 
-The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres)
+The full example can be found on [GitHub.](https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres)
+
+## Deletion
+
+Currently you can't safely delete your own AWS RDS instance at the moment - we're working on implementing functionality for self-service database deletion. In the meantime, feel free to [reach out to us](https://www.shuttle.rs/contact) or open a help thread on our Discord if you need any assistance with this.
+
+Note that if you do accidentally drop your provisioned database, you will need to [contact us](https://www.shuttle.rs/contact) to assist you with your issue or you can open a help thread on our Discord server.
