--- a/examples/axum-postgres.mdx
+++ b/examples/axum-postgres.mdx
@@ -25,7 +25,7 @@ use axum::{Json,
 	http::StatusCode, 
 	response::IntoResponse, 
 	Router, 
-	routing::get};
+	routing::{post, get}};
 use serde::{Deserialize, Serialize};
 use shuttle_runtime::CustomError;
 use sqlx::{FromRow, PgPool};
@@ -72,7 +72,8 @@ async fn axum(
 
     let state = MyState { pool };
     let router = Router::new()
-        .route("/todos", get(retrieve).post(add))
+        .route("/todos", post(add))
+	.route("/todos/:id", get(retrieve))
         .with_state(state);
 
     Ok(router.into())
