--- a/resources/custom-resources.mdx
+++ b/resources/custom-resources.mdx
@@ -2,9 +2,11 @@
 title: "Custom Resources"
 ---
 
-This example shows how you can make a custom resource called `pdo` which outputs the value that you pass into the "name" attribute for the resource. 
+This example shows how you can make a custom resource.
 
-We are using the Axum framework in `main.rs` so we can showcase the resource in action, but the implementation doesn't require any particular framework.  
+The example resource we'll be making will be called `pdo`, and outputs the value that you pass into the "name" attribute for the resource. 
+
+We are using the Axum framework in `main.rs` so we can showcase the resource in action, but the implementation is entirely separate from what web framework you use so you can add your custom resource to any Shuttle-hosted resource.
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash:
