--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -13,7 +13,7 @@ There are a few routes available:
  
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder axum/websocket
 ```
 
