--- a/examples/actix-cookie-authentication.mdx
+++ b/examples/actix-cookie-authentication.mdx
@@ -10,7 +10,7 @@ The idea is that all requests authenticate first at the login route to get a coo
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder actix-web/cookie-authentication
 ```
 
