--- a/examples/actix-websocket-actorless.mdx
+++ b/examples/actix-websocket-actorless.mdx
@@ -9,7 +9,7 @@ This example shows how to use a WebSocket to show the live status of the Shuttle
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder actix-web/websocket-actorless
 ```
 
