--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -13,8 +13,7 @@ This section revolves around simple Actix examples you can get quickly started w
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
- --subfolder actix-web/hello-world
+cargo shuttle init --template actix-web 
 ```
 
 <CodeGroup>
