--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -18,7 +18,7 @@ Three Axum routes are registered in this file:
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash 
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder axum/jwt-authentication
 ```
 
