--- a/examples/axum-postgres.mdx
+++ b/examples/axum-postgres.mdx
@@ -12,7 +12,7 @@ The following routes are provided:
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash 
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder axum/postgres
 ```
 
