--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -14,8 +14,7 @@ This section revolves around simple Axum examples you can get quickly started wi
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
- --subfolder axum/hello-world
+cargo shuttle init --template axum
 ```
 
 <CodeGroup>
