--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -14,7 +14,7 @@ However, this example only makes use of symmetric encoding and validation on the
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder rocket/jwt-authentication
 ```
 
