--- a/examples/rocket-postgres.mdx
+++ b/examples/rocket-postgres.mdx
@@ -13,7 +13,7 @@ The following routes are provided:
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder rocket/postgres
 ```
 
