--- a/examples/rocket-static-files.mdx
+++ b/examples/rocket-static-files.mdx
@@ -11,7 +11,7 @@ Note that we declare what files we allow our app to serve in the `Shuttle.toml` 
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+cargo shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder rocket/static-files
 ```
 
