--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -14,8 +14,7 @@ This section revolves around simple Rocket examples you can get quickly started 
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
- --subfolder rocket/hello-world
+cargo shuttle init --template rocket
 ```
 
 <CodeGroup>
