--- a/examples/other.mdx
+++ b/examples/other.mdx
@@ -1,4 +1,4 @@
-This section contains examples for the following frameworks: Warp, Tower, Poem, Rocket, Salvo, Thruster, Poem & Tide.
+This section contains examples for the following frameworks: Tower, Warp, Salvo, Poem, Thruster, and Tide.
 
 ### Hello World
 
