--- a/tutorials/websocket-chat-app-js.mdx
+++ b/tutorials/websocket-chat-app-js.mdx
@@ -226,7 +226,7 @@ cargo install cargo-shuttle
 You can also use [`cargo-binstall`](https://github.com/cargo-bins/cargo-binstall) to install cargo-shuttle:
 
 ```bash
-cargo binstall cargo-shuttle\
+cargo binstall cargo-shuttle
 ```
 
 The installation may take a while depending on your Internet connection, so feel free to grab a drink while you wait. You will also want to log onto their website here through GitHub and make sure you have your API key as you will need to log in on the CLI with your key before you can make any projects.
