--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -7,7 +7,7 @@ description: "This article walks you through setting up static files with Actix 
 
 This example has one route at `/` where the homepage is served and shows you how you can serve HTML or other types of files with Actix Web.
 
-Note that we declare what files we allow our app to serve in the `Shuttle.toml` config file which is should be placed in the project root and only allows files that are within the project folder.
+Note that static assets are declared in the `Shuttle.toml` file.
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
