--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -3,55 +3,60 @@ title: "Migrating to Shuttle"
 description: "Short guide on how to migrate your existing project over to Shuttle"
 ---
 
+## Setup
 
-### Setup
+<Note>
+    This guide assumes that you have Shuttle already setup.
+    If you don't, head on over to our [installation](/getting-started/installation) guide.
+</Note>
 
-This guide assumes that you have Shuttle already setup. If you don't, head on over to our [installation](/getting-started/installation) & [quick start](/getting-started/quick-start) guides in order to install Shuttle & create your first project.
+For this example, we'll assume you are migrating an Axum project.
 
-For this example, we'll assume you are migrating your Axum project. Once you've created your project, you'll want to add `shuttle_runtime` and `shuttle_axum` to your dependencies to be able to use shuttle's runtime with the Axum framework. You can run the following command below like so to do this:
+The first step is to add `shuttle-runtime` and `shuttle-axum` to your dependencies to be able to use Shuttle's runtime with the Axum framework.
 
 ```bash
-cargo add shuttle_runtime shuttle_axum
+cargo add shuttle-runtime shuttle-axum
 ```
 
-Any secrets you need to use will be kept in a `Secrets.toml` file (dev secrets to be held in `Secrets.dev.toml`) which will be placed at the `Cargo.toml` level - you'll want to use the `shuttle_secrets` crate to be able to use the new secrets:
+Any [secrets](/resources/shuttle-secrets) you need to use will be kept in a `Secrets.toml` file (dev secrets to be held in `Secrets.dev.toml`) which will be placed at the `Cargo.toml` level - you'll want to use the `shuttle-secrets` crate to be able to use the new secrets:
 
 ```bash
-cargo add shuttle_secrets
+cargo add shuttle-secrets
 ```
 
 Your secrets file will look the same as your previous .env file, so you won't need to change anything.
 
-You can also easily get a provisioned database like so (this example will be for a provisioned PostgresQL instance specifically):
+You can also easily get a provisioned database like so (this example will be for a provisioned PostgreSQL instance specifically):
 
 ```bash
 cargo add shuttle-shared-db --features postgres
 ```
 
-If you have any database records you'd like to keep, it would be a good idea to make sure you export them before you start as you'll want to make sure those are preserved; otherwise, you'll lose the data. **You will not need a secrets file if you only need a provisioned PG database - this will be automatically be provisioned to you in the form of a SQLx connection.**
+If you have any database records you'd like to keep, it would be a good idea to export them so that they can be migrated to the new database.
+**You will not need a secrets file if you only need a provisioned Postgres database - this will be automatically be provisioned to you in the form of a SQLx connection.**
 
-### Migrating your Code
+## Migrating your Code
 
-To be able to run your project on Shuttle, you need to make a few changes to your code. Instead of running on the `tokio` runtime, you should use the `shuttle_service::main` macro instead like so and swap out `dotenvy` for Shuttle's Postgres annotation:
+To be able to run your project on Shuttle, you need to make a few changes to your code.
+Instead of the `tokio::main` macro, you will use the `shuttle_runtime::main` macro and swap out `dotenvy` for Shuttle's Postgres annotation:
 
 This is what your `main.rs` file looks before:
 
-```rust
-// main.rs
+```rust main.rs
 #[tokio::main]
 async fn main() {
-    dotenv().ok();
+    dotenvy::dotenv().ok();
 
-    let postgres = dotenvy::var("DATABASE_URL").expect("No database URL was set!");
+    let url = dotenvy::var("DATABASE_URL").expect("No database URL was set!");
 
-    let postgres = sqlx::Pool::connect(&postgres).await.unwrap();
+    let pool = sqlx::Pool::connect(&url).await.unwrap();
 
     sqlx::migrate!()
-        .run(&postgres)
+        .run(&pool)
         .await
         .expect("Migrations failed :(");
 
-    let router = create_api_router(postgres);
+    let router = create_api_router(pool);
     let addr = SocketAddr::from(([0, 0, 0, 0], 8000));
 
     Server::bind(&addr)
@@ -63,32 +68,33 @@ async fn main() {
 
 And this is what it looks like after:
 
-```rust
+```rust main.rs
 #[shuttle_runtime::main]
 pub async fn axum (
-#[shuttle_shared_db::Postgres] postgres: PgPool,
-#[shuttle_secrets::Secrets] secrets: shuttle_secrets::SecretStore
+    #[shuttle_shared_db::Postgres] pool: PgPool,
+    #[shuttle_secrets::Secrets] secrets: shuttle_secrets::SecretStore,
 ) -> shuttle_axum::ShuttleAxum {
-
     sqlx::migrate!()
-        .run(&postgres)
+        .run(&pool)
         .await
         .expect("Migrations failed :(");
 
- let router = create_api_router(postgres);
+    // Use secrets for anything that needs them
 
-Ok(router.into())
+    let router = create_api_router(pool);
+
+    Ok(router.into())
 }
 ```
 
 If you need more than a simple router, you'll want to create a custom struct that holds all of your required app state information inside and then create an `impl` for the struct - you can find more about that [here.](https://docs.shuttle.rs/tutorials/custom-service) Anything outside of your entry point function (the function that uses the `shuttle_runtime::main` macro) doesn't need to be changed. If you are using secrets as well as a database connection, you may wish to create a struct that holds both of these values and then pass it into the function that generates the router.
 
-### Deploying
+## Deploying
 
-If you haven't yet, you will probably want a `Shuttle.toml` file at the `Cargo.toml` level to name your project to whatever you'd like, like so:
+To ensure that you get a unique project name, create a `Shuttle.toml` file at the `Cargo.toml` level to name your project to whatever you like.
 
-```ini
-name="<app-name-here>"
+```toml
+name = "my-unique-app-name-here"
 ```
 
 Now all you need to do is to run the following commands:
