--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -5,12 +5,14 @@ title: "How Shuttle works"
 The simplest way to build and deploy a web app on Shuttle looks like this:
 
 ```rust
+use axum::{routing::get, Router};
+
 async fn hello_world() -> &'static str {
     "Hello, world!"
 }
 
 #[shuttle_runtime::main]
-async fn axum() -> shuttle_axum::ShuttleAxum {
+async fn main() -> shuttle_axum::ShuttleAxum {
     let router = Router::new().route("/", get(hello_world));
 
     Ok(router.into())
@@ -20,9 +22,9 @@ async fn axum() -> shuttle_axum::ShuttleAxum {
 This example spins up a server where the `/` endpoint returns `Hello, world!`.
 But most importantly, the code you see in the snippet above, is all it takes for `cargo shuttle deploy` to deploy it.
 
-This is possible due to the `#[shuttle_runtime::main]` procedural macro. The macro wraps your app with Shuttle's runtime. The Shuttle runtime receives commands from the deployers, such as `load`, `start`, and `stop`. The loading phase provisions resources for the app (see Provisioning Resources below).
+This is possible due to the `#[shuttle_runtime::main]` procedural macro. The macro wraps your app with Shuttle's runtime. The Shuttle runtime receives commands from the deployers, such as `load`, `start`, and `stop`. The loading phase provisions resources for the app (see below).
 
-### Provisioning Resources
+## Provisioning Resources
 
 ![Shuttle macros](/images/shuttle-macros.png)
 
@@ -30,7 +32,7 @@ In the example above, the 3 annotations in the main function expand to code that
 
 Here are the examples on how to use them, once you add the required annotations to your code:
 
-**Secrets**
+### Secrets
 
 ```rust
 #[shuttle_runtime::main]
@@ -46,7 +48,7 @@ async fn axum(
 }
 ```
 
-**Postgres Database**
+### Postgres Database
 
 ```rust
 #[shuttle_runtime::main]
@@ -62,19 +64,13 @@ async fn axum(
 
 For more info on resources, head on over to our [Resources](/resources/overview) section.
 
-### Deploying your Project
+## Deploying your Project
 
-When you run `cargo shuttle deploy`, your project code is archived and sent to our servers where it is compiled to a binary. Our codegen in `shuttle_runtime::main` will embed a gRPC server in the binary that we will be used to start and stop your service, as well as a `Loader` struct that will provision the resources you request in the arguments to your main function. Your service will then be started on Shuttle’s infrastructure in the `eu-west2` region of AWS.
+When you run `cargo shuttle deploy`, your project code is archived and sent to our servers where it is compiled. Our codegen in `shuttle_runtime::main` will embed a gRPC server in the binary that we will be used to start and stop your service, as well as a `Loader` struct that will provision the resources you request in the arguments to your main function. Your service will then be started on Shuttle's infrastructure in the `eu-west2` region of AWS.
 
-### Project Limitations
+## More reading
 
-Currently we limit a project container’s memory usage to `4GB` during high contention and `6GB` otherwise.
-
-CPU usage per project is currently limited to four threads. However, because of how this limit is implemented through Docker, popular crates like `num_cpus` may think it has access to all of the host’s threads.
-
-In terms of database resources, the only restriction we have is that an RDS database has a max storage of `10GB`.
-
-Other than that any reasonable usage is acceptable during our beta, but we will intervene when we detect applications that use excessively large amounts of storage (after attempting to contact the owner).
+Check out the [files](/configuration/files) and [environment](/configuration/environment) sections for more details.
 
 ---
 
